--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Free Education Template</title>
+    <title>Welcome</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
@@ -17,6 +17,7 @@
     <!-- Google	Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css' />
 </head>
+
 <body >
 
 <div class="navbar navbar-inverse navbar-fixed-top " id="menu">
@@ -55,8 +56,8 @@
                             <li>
                                 <h3>Delivering Quality Education</h3>
                                 <h1>THE UNIQUE METHOD</h1>
-                                <a  href="#features-sec" class="btn btn-info btn-lg" >
-                                    GET AWESOME
+                                <a  href="/users/login" class="btn btn-info btn-lg" >
+                                    Administrator Login
                                 </a>
                                 <a  href="#features-sec" class="btn btn-success btn-lg" >
                                     FEATURE LIST
