--- a/pages/loginpage.html
+++ b/pages/loginpage.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Login page-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,12 +8,9 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
-
 <div class="container">
-
     <br>
     <br>
-
     <form class="form-signin" method="POST" action = "/users/login" enctype="application/x-www-form-urlencoded">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="usernm" class="sr-only">Email address</label>
@@ -27,6 +25,5 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </div> <!-- /container -->
-
 </body>
 </html>
