--- a/pages/loginpage.html
+++ b/pages/loginpage.html
@@ -2,12 +2,13 @@
 <!--Login page-->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="/stylesheets/login.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+<meta charset="UTF-8">
+<title>Login</title>
+<link rel="stylesheet" href="/stylesheets/login.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/animate.css">
 </head>
-<body>
+<body class= "animated fadeIn">
 <div class="container">
     <br>
     <br>
