--- a/pages/home.html
+++ b/pages/home.html
@@ -24,12 +24,11 @@
 <div class="navbar navbar-inverse navbar-fixed-top " id="menu">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img class="logo-custom" src="/img/logo180-50.png" alt=""  /></a>
         </div>
         <div class="navbar-collapse collapse move-me">
             <ul class="nav navbar-nav navbar-right">
@@ -60,9 +59,7 @@
                                 <a  href="/users/login" class="btn btn-info btn-lg" >
                                     Administrator Login
                                 </a>
-                                <a  href="#features-sec" class="btn btn-success btn-lg" >
-                                    FEATURE LIST
-                                </a>
+
                             </li>
                             <!-- End Slider 01 -->
 
@@ -70,12 +67,10 @@
                             <li>
                                 <h3>Delivering Quality Education</h3>
                                 <h1>UNMATCHED APPROACH</h1>
-                                <a  href="#features-sec" class="btn btn-primary btn-lg" >
-                                    GET AWESOME
+                                <a  href="/users/login" class="btn btn-info btn-lg" >
+                                    Administrator Login
                                 </a>
-                                <a  href="#features-sec" class="btn btn-danger btn-lg" >
-                                    FEATURE LIST
-                                </a>
+
                             </li>
                             <!-- End Slider 02 -->
 
@@ -83,12 +78,10 @@
                             <li>
                                 <h3>Delivering Quality Education</h3>
                                 <h1>AWESOME FACULTY PANEL</h1>
-                                <a  href="#features-sec" class="btn btn-default btn-lg" >
-                                    GET AWESOME
+                                <a  href="/users/login" class="btn btn-info btn-lg" >
+                                    Administrator Login
                                 </a>
-                                <a  href="#features-sec" class="btn btn-info btn-lg" >
-                                    FEATURE LIST
-                                </a>
+
                             </li>
                             <!-- End Slider 03 -->
                         </ul>
@@ -107,7 +100,7 @@
 
             <div class="col-lg-12  col-md-12 col-sm-12">
 
-                <h2 data-scroll-reveal="enter from the bottom after 0.1s" ><i class="fa fa-circle-o-notch"></i> WELCOME TO THE EDU-CENTER <i class="fa fa-circle-o-notch"></i> </h2>
+                <h2 data-scroll-reveal="enter from the bottom after 0.1s" ><i class="fa fa-circle-o-notch"></i> WELCOME TO THE MINISTRY OF EDUCATION SRI LANKA <i class="fa fa-circle-o-notch"></i> </h2>
             </div>
         </div>
     </div>
@@ -130,7 +123,7 @@
     <!--/.HEADER LINE END-->
 
 
-    <div class="row" >
+<!--    <div class="row" >
 
 
         <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
@@ -144,10 +137,10 @@
                     Aenean commodo .
 
                 </p>
-                <a href="#" class="btn btn-info btn-set"  >ASK THE EXPERT</a>
+                <a href="https://www.moe.gov.lk/" class="btn btn-info btn-set"  >Visit Ministry of Education</a>
             </div>
         </div>
-        <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.5s">
+        <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.5s" >
             <div class="about-div">
                 <i class="fa fa-bolt fa-4x icon-round-border" ></i>
                 <h3 >SYSTEMATIC APPROACH</h3>
@@ -158,10 +151,10 @@
                     Aenean commodo .
 
                 </p>
-                <a href="#" class="btn btn-info btn-set"  >ASK THE EXPERT</a>
+                <a href="https://www.doenets.lk" class="btn btn-info btn-set"  >Visit Department of Examination</a>
             </div>
         </div>
-        <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.6s">
+       <<div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.6s">
             <div class="about-div">
                 <i class="fa fa-magic fa-4x icon-round-border" ></i>
                 <h3 >ONE TO ONE STUDY</h3>
@@ -178,9 +171,9 @@
 
 
     </div>
-</div>
+</div>-->
 <!-- FEATURES SECTION END-->
-<div id="faculty-sec" >
+<!--<div id="faculty-sec" >
     <div class="container set-pad">
         <div class="row text-center">
             <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
@@ -193,10 +186,10 @@
                 </p>
             </div>
 
-        </div>
+        </div>-->
         <!--/.HEADER LINE END-->
 
-        <div class="row" >
+ <!--       <div class="row" >
 
 
             <div class="col-lg-4  col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
@@ -243,7 +236,7 @@
     </div>
 </div>
 <!-- FACULTY SECTION END-->
-<div id="course-sec" class="container set-pad">
+<!--<div id="course-sec" class="container set-pad">
     <div class="row text-center">
         <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
             <h1 data-scroll-reveal="enter from the bottom after 0.1s" class="header-line">OUR COURSES </h1>
@@ -259,7 +252,7 @@
     <!--/.HEADER LINE END-->
 
 
-    <div class="row set-row-pad" >
+ <!--   <div class="row set-row-pad" >
         <div class="col-lg-6 col-md-6 col-sm-6 " data-scroll-reveal="enter from the bottom after 0.4s" >
             <img src="/img/building.jpg" class="img-thumbnail" />
         </div>
@@ -372,11 +365,11 @@
 
             <h2 ><strong>Our Location </strong></h2>
             <hr />
-            <div ">
-            <h4>234/80 -UFG , New Street,</h4>
-            <h4>Switzerland.</h4>
-            <h4><strong>Call:</strong>  + 67-098-907-1269 / 70 / 71 </h4>
-            <h4><strong>Email: </strong>info@yourdomain.com</h4>
+            <div >
+            <h4>Isurupaya, Palawatta,</h4>
+            <h4>Battaramulla.</h4>
+            <h4><strong>Call:</strong>  + 94-11-2-568969 / 70 / 71 </h4>
+            <h4><strong>Email: </strong>info@moe.gov.lk</h4>
         </div>
 
 
