--- a/pages/home.html
+++ b/pages/home.html
@@ -390,7 +390,7 @@
 </div>
 <!-- CONTACT SECTION END-->
 <div id="footer">
-    &copy 2014 yourdomain.com | All Rights Reserved |  <a href="http://binarytheme.com" style="color: #fff" target="_blank">Design by : binarytheme.com</a>
+    &copy 2017 crystalit.lk| All Rights Reserved |  <a href="#" style="color: #fff" target="_blank">Design by :CrystalIT</a>
 </div>
 <!-- FOOTER SECTION END-->
 
